hphp/hack/test/typecheck/call_in_static_shape.php.coeffects.exp
File "call_in_static_shape.php", line 7, characters 28-33:
Invalid expression in constant initializer (Parsing[1002])
File "call_in_static_shape.php", line 7, characters 28-33:
Variable `$#capability` is undefined, or not always defined. (Naming[2050])
